# bluetooth-keyboard-firmware

./: Cargo.toml  memory.x
src/: gpio.rs  hid.rs  keycodes.rs  keymap.rs  main.rs
src/ble/: advertise.rs  battery.rs  mod.rs  spec.rs
src/hid/: device_information.rs  hid.rs  mod.rs
src/keyboard/: keycodes.rs  keymap.rs  mod.rs
